--- a/index.html
+++ b/index.html
@@ -27,10 +27,21 @@
           </div>
         </div>
         <div id="eraser"  class="child"><i class="fas fa-eraser fa-2x"></i></div>
-        <div id="settings" class="child"><i class="fas fa-cog fa-2x"></i></div>
+        <div class="dropdown">
+          <div id="settings" class="dropbtn child"><i class="fas fa-cog fa-2x"></i></div>
+          <div id="settingsDropdown" class="dropdown-content">
+            <a id="red" href="#"><img src="./assets/red.png" width="30px" height="30px" alt=""></a>
+            <a id="green" href="#"><img src="./assets/green.png" width="30px" height="30px" alt=""></a>
+            <a id="blue" href="#"><img src="./assets/blue.png" width="30px" height="30px" alt=""></a>
+            <a id="orange" href="#"><img src="./assets/orange.png" width="30px" height="30px" alt=""></a>
+            <a id="pink" href="#"><img src="./assets/pink.png" width="30px" height="30px" alt=""></a>
+            <a id="gray" href="#"><img src="./assets/gray.png" width="30px" height="30px" alt=""></a>
+            <a id="black" href="#"><img src="./assets/black.png" width="30px" height="30px" alt=""></a>
+            <a id="white" href="#"><img src="./assets/white.png" width="30px" height="30px" alt=""></a>
+          </div>
+        </div>
       </div>
       <canvas id='draw' ></canvas>
-      <p id="display"></p>
       <script src="./draw.js"></script>
     </body>
   </html>
