--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="modal-body">
               <h4>Eraser Size:</h4>
               <input class="slider" type="range" name="e-slider" id="e-slider" min="1" max="200">
+              <p id="output"></p>
               <h4>Brush Size:</h4>
               <input class="slider" type="range" name="b-slider" id="b-slider" min="1" max="200">
             </div>
